K1J-1725: Fix maintainability issues